apps/sonarr/deployment-sonarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - image: linuxserver/sonarr:4.0.20
          name: sonarr
          resources:
            requests:
              memory: 220Mi
          ports:
            - containerPort: 8989
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: sonarr
            - mountPath: /data/Backup
              name: library
              subPath: "arr/sonarr/backup"
            - mountPath: /data
              name: library
      hostname: sonarr
      restartPolicy: Always
      volumes:
        - name: sonarr
          persistentVolumeClaim:
            claimName: sonarr
        - name: library
          persistentVolumeClaim:
            claimName: plex-library
