apps/sonarr/service-sonarr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarr
  name: sonarr
spec:
  ports:
    - name: "8989"
      port: 8989
      targetPort: 8989
  selector:
    app: sonarr
