apps/sonarr/ingress-sonarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr
  namespace: plex
spec:
  ingressClassName: cilium
  rules:
  - host: sonarr.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: sonarr
            port:
              number: 8989
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - sonarr.almothana.xyz
      secretName: almothana-xyz-tls
